--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ footer > div#date-time{
   font-size: 5vh;
   margin: 32px;
   display: flex;
-  justify-content:flex-end;
+  justify-content: flex-start;
 
 }
 
